Added the standalone Exploratory Data Analysis component to the notebook.
- Updated environment.yml

--- a/environment.yml
+++ b/environment.yml
@@ -27,4 +27,6 @@ dependencies:
   - pip:
       - pandas-datareader
       - python-dotenv
+      # Optional: install stubs for static type checkers / language servers
+      - pandas-stubs
 
